--- a/Ironcrunch/src/components/moves/content/undertake-a-journey.pug
+++ b/Ironcrunch/src/components/moves/content/undertake-a-journey.pug
@@ -22,4 +22,4 @@ mixin UndertakeAJourney(values)
       li You move with precaution: Mark progress and <em>Find an Opportunity</em>, but suffer -1 supply and -2 momentum.
       li You move at speed, but with a cost: Mark progress twice and take +1 momentum, but suffer -2 supply and <em>Reveal a Danger</em>.
       li You explore: <em>Find an Opportunity</em>, but suffer -1 momentum.
-    p On a <strong>miss</strong>, you have gone hopelessly astray, your objective is lost to you, or you were misled about your destination. If your journey continues, clear all but one filled progress, and raise the journey's rank by one (if not already epic).
+    p On a <strong>miss</strong>, you are waylaid by a perilous event. <em>Reveal a Danger</em>.
