--- a/Ironcrunch/src/data/move-list.pug
+++ b/Ironcrunch/src/data/move-list.pug
@@ -4,14 +4,14 @@
       title: 'Advance',
       name: 'advance',
       class: 'advance',
-      page: 'page X',
+      page: 'page 77',
       radio: 'advance'
     },
     aid_your_ally: {
       title: 'Aid Your Ally',
       name: 'aidYourAlly',
       class: 'aid-your-ally',
-      page: 'page X',
+      page: '- Moves Reference - page 4',
       radio: 'aid_your_ally',
       stat: `?{Stat|Edge, @{edge}|Iron, @{iron}|Heart, @{heart}|Shadow, @{shadow}|Wits, @{wits}}`,
       stat_repeat: '?{Stat}'
@@ -20,14 +20,14 @@
       title: 'Ask the Oracle',
       name: 'askTheOracle',
       class: 'ask-the-oracle',
-      page: 'page X',
+      page: 'page 78',
       radio: 'ask_the_oracle'
     },
     battle: {
       title: 'Battle',
       name: 'Battle',
       class: 'battle',
-      page: 'page X',
+      page: 'page 73',
       radio: 'battle',
       stat: `?{Stat|Edge, @{edge}|Iron, @{iron}|Heart, @{heart}|Shadow, @{shadow}|Wits, @{wits}}`,
       stat_repeat: '?{Stat}',
@@ -37,14 +37,14 @@
       title: 'Burn Momentum',
       name: 'burnMomentum',
       class: 'burn-momentum',
-      page: 'page X',
+      page: 'page 79',
       radio: 'burn_momentum'
     },
     check_your_gear: {
       title: 'Check Your Gear',
       name: 'checkYourGear',
       class: 'check-your-gear',
-      page: 'page X',
+      page: 'page 68',
       radio: 'check_your_gear',
       stat: `?{Stat|Supply,@{supply}|Wits - Improviser,@{wits}}`,
       stat_repeat: '?{Stat}'
@@ -53,7 +53,7 @@
       title: 'Clash',
       name: 'clash',
       class: 'clash',
-      page: 'page X',
+      page: 'page 72',
       radio: 'clash',
       stat: `?{Stat|Edge&#44;@{edge}|Iron&#44;@{iron}|Light - Lightbearer&#44;?{Light&amp;#124;0&amp;#125;&#125;`,
       stat_repeat: '?{Stat}',
@@ -63,14 +63,14 @@
       title: 'Companion Becomes Unconditional',
       name: 'companionBecomesUnconditional',
       class: 'companion-becomes-unconditional',
-      page: 'page X',
+      page: 'page 71',
       radio: 'companion_becomes_unconditional'
     },
     compel: {
       title: 'Compel',
       name: 'compel',
       class: 'compel',
-      page: 'page X',
+      page: 'page 69',
       radio: 'compel',
       stat: `?{Stat|Iron&#44;@{iron}|Heart&#44;@{heart}|Shadow&#44;@{shadow}|Essence - Invoke&#44;?{Essence&amp;#124;0&amp;#125;&#125;`,
       stat_repeat: '?{Stat}',
@@ -80,14 +80,14 @@
       title: 'Conditional Companion Abandons',
       name: 'conditionalCompanionAbandons',
       class: 'conditional-companion-abandons',
-      page: 'page X',
+      page: 'page 71',
       radio: 'conditional_companion_abandons'
     },
     conditional_companion_acts: {
       title: 'Conditional Companion Acts',
       name: 'conditionalCompanionActs',
       class: 'conditional-companion-acts',
-      page: 'page X',
+      page: 'page 71',
       radio: 'conditional_companion_acts',
       stat: `?{Stat|0}`,
       stat_repeat: '?{Stat}',
@@ -97,7 +97,7 @@
       title: 'Delve the Depths',
       name: 'delveTheDepths',
       class: 'delve-the-depths',
-      page: 'page X',
+      page: 'page 68',
       radio: 'delve_the_depths',
       stat: `?{Stat|Edge,@{edge}|Shadow,@{shadow}|Wits,@{wits}}`,
       stat_repeat: '?{Stat}',
@@ -107,7 +107,7 @@
       title: 'Discover a Site',
       name: 'discoverASite',
       class: 'discover-a-site',
-      page: 'page X',
+      page: 'page 68',
       radio: 'discover_a_site',
       roll: true,
       discover: true
@@ -116,7 +116,7 @@
       title: 'Draw the Circle',
       name: 'drawTheCircle',
       class: 'draw-the-circle',
-      page: 'page X',
+      page: 'page 69',
       radio: 'draw_the_circle',
       stat: `@{heart}`,
       stat_repeat: '@{heart}',
@@ -126,7 +126,7 @@
       title: 'End the Fight',
       name: 'endTheFight',
       class: 'end-the-fight',
-      page: 'page X',
+      page: 'page 73',
       radio: 'end_the_fight',
       roll: true,
       progress: true
@@ -135,7 +135,7 @@
       title: 'Endure Harm',
       name: 'endureHarm',
       class: 'endure-harm',
-      page: 'page X',
+      page: 'page 75',
       radio: 'endure_harm',
       stat: `@{iron}`,
       stat_repeat: '@{iron}',
@@ -145,7 +145,7 @@
       title: 'Endure Stress',
       name: 'endureStress',
       class: 'endure-stress',
-      page: 'page X',
+      page: 'page 75',
       radio: 'endure_stress',
       stat: `?{Stat|Spirit,@{spirit}|Heart,@{heart}}`,
       stat_repeat: '?{Stat}',
@@ -155,7 +155,7 @@
       title: 'Enter the Fray',
       name: 'enterTheFray',
       class: 'enter-the-fray',
-      page: 'page X',
+      page: 'page 73',
       radio: 'enter_the_fray',
       stat: `?{Stat|Heart, @{heart}|Shadow, @{shadow}|Wits, @{wits}}`,
       stat_repeat: '?{Stat}',
@@ -165,7 +165,7 @@
       title: 'Escape the Depths',
       name: 'escapeTheDepths',
       class: 'escape-the-depths',
-      page: 'page X',
+      page: 'page 68',
       radio: 'escape_the_depths',
       stat: `?{Stat|Edge,@{edge}|Heart,@{heart}|Iron,@{iron}|Wits,@{wits}|Shadow,@{shadow}}`,
       stat_repeat: '?{Stat}',
@@ -175,14 +175,14 @@
       title: 'Face a Setback',
       name: 'faceASetback',
       class: 'face-a-setback',
-      page: 'page X',
+      page: 'page 76',
       radio: 'face_a_setback',
     },
     face_danger: {
       title: 'Face Danger',
       name: 'faceDanger',
       class: 'face-danger',
-      page: 'page X',
+      page: 'page 66',
       radio: 'face_danger',
       stat: `?{Stat|Edge&#44;@{edge}|Iron&#44;@{iron}|Heart&#44;@{heart}|Shadow&#44;@{shadow}|Wits&#44;@{wits}|Essence - Invoke&#44;?{Essence&amp;#124;0&amp;#125;&#125;`,
       stat_repeat: '?{Stat}',
@@ -192,7 +192,7 @@
       title: 'Face Death',
       name: 'faceDeath',
       class: 'face-death',
-      page: 'page X',
+      page: 'page 76',
       radio: 'face_death',
       stat: `?{Stat|Heart,@{heart}|Shadow - Shadow-kin,@{shadow}}`,
       stat_repeat: '?{Stat}',
@@ -203,7 +203,7 @@
       title: 'Face Desolation',
       name: 'faceDesolation',
       class: 'face-desolation',
-      page: 'page X',
+      page: 'page 76',
       radio: 'face_desolation',
       stat: `@{heart}`,
       stat_repeat: '@{heart}',
@@ -213,21 +213,21 @@
       title: 'Find an Opportunity',
       name: 'findAnOpportunity',
       class: 'find-an-opportunity',
-      page: 'page X',
+      page: 'page 80',
       radio: 'find_an_opportunity'
     },
     foe_inflicts_harm: {
       title: 'Foe Inflicts Harm',
       name: 'foeInflictsHarm',
       class: 'foe-inflicts-harm',
-      page: 'page X',
+      page: 'page 72',
       radio: 'foe_inflicts_harm'
     },
     forge_a_bond: {
       title: 'Forge a Bond',
       name: 'forgeABond',
       class: 'forge-a-bond',
-      page: 'page X',
+      page: 'page 70',
       radio: 'forge_a_bond',
       stat: `?{Stat|Heart,@{heart}|Shadow - Trickster,@{shadow}}`,
       stat_repeat: '?{Stat}',
@@ -237,14 +237,14 @@
       title: 'Forsake Your Vow',
       name: 'forsakeYourVow',
       class: 'forsake-your-vow',
-      page: 'page X',
+      page: '- Moves Reference - page 10',
       radio: 'forsake_your_vow',
     },
     fulfill_your_vow: {
       title: 'Fulfill Your Vow',
       name: 'fulfillYourVow',
       class: 'fulfill-your-vow',
-      page: 'page X',
+      page: 'page 77',
       radio: 'fulfill_your_vow',
       roll: true,
       progress: true
@@ -253,7 +253,7 @@
       title: 'Gather Information',
       name: 'gatherInformation',
       class: 'gather-information',
-      page: 'page X',
+      page: 'page 67',
       radio: 'gather_information',
       stat: `?{Stat|Wits,@{wits}|Shadow - Infiltrator/Trickster/Scry,@{shadow}}`,
       stat_repeat: '?{Stat}',
@@ -263,7 +263,7 @@
       title: 'Heal',
       name: 'heal',
       class: 'heal',
-      page: 'page X',
+      page: 'page 74',
       radio: 'heal',
       stat: `?{Stat|Wits,@{wits}|Iron,@{iron}}`,
       stat_repeat: '?{Stat}',
@@ -273,7 +273,7 @@
       title: 'Hearten',
       name: 'hearten',
       class: 'hearten',
-      page: 'page X',
+      page: 'page 74',
       radio: 'hearten',
       stat: `@{heart}`,
       stat_repeat: '@{heart}',
@@ -283,14 +283,14 @@
       title: 'Inflict Harm',
       name: 'inflictHarm',
       class: 'inflict-harm',
-      page: 'page X',
+      page: 'page 72',
       radio: 'inflict_harm'
     },
     learn_from_faults: {
       title: 'Learn from Faults',
       name: 'learnFromFaults',
       class: 'learn-from-faults',
-      page: 'page X',
+      page: 'page 77',
       radio: 'learn_from_faults',
       roll: true,
       progress: true
@@ -299,7 +299,7 @@
       title: 'Locate Your Objective',
       name: 'locateYourObjective',
       class: 'locate-your-objective',
-      page: 'page X',
+      page: 'page 68',
       radio: 'locate_your_objective',
       roll: true,
       progress: true
@@ -308,14 +308,14 @@
       title: 'Make an Effort',
       name: 'makeAnEffort',
       class: 'make-an-effort',
-      page: 'page X',
+      page: 'page 79',
       radio: 'make_an_effort'
     },
     make_camp: {
       title: 'Make Camp',
       name: 'makeCamp',
       class: 'make-camp',
-      page: 'page X',
+      page: 'page 74',
       radio: 'make_camp',
       stat: `?{Stat|Supply&#44;@{supply}|Wits - Wildblood&#44;@{wits}|Health - Mammoth&#44;?{Mammoth's Health&amp;#124;0&amp;#125;&#125;`,
       stat_repeat: '?{Stat}',
@@ -325,7 +325,7 @@
       title: 'Manifest Insanity',
       name: 'manifestInsanity',
       class: 'manifest-insanity',
-      page: 'page X',
+      page: 'page 84',
       radio: 'manifest_insanity',
       roll: true,
       oracle: 'ironcrunch_oracles'
@@ -334,14 +334,14 @@
       title: 'Not Assist Conditional Companion',
       name: 'notAssistConditionalCompanion',
       class: 'not-assist-conditional-companion',
-      page: 'page X',
+      page: 'page 71',
       radio: 'not_assist_conditional_companion'
     },
     order_conditional_companion: {
       title: 'Order Conditional Companion',
       name: 'orderConditionalCompanion',
       class: 'order-conditional-companion',
-      page: 'page X',
+      page: 'page 71',
       radio: 'order_conditional_companion',
       stat: `?{Loyalty|0}`,
       stat_repeat: '?{Loyalty}',
@@ -351,14 +351,14 @@
       title: 'Out of Supply',
       name: 'outOfSupply',
       class: 'out-of-supply',
-      page: 'page X',
+      page: 'page 76',
       radio: 'out_of_supply'
     },
     patch_equipment: {
       title: 'Patch Equipment',
       name: 'patchEquipment',
       class: 'patch-equipment',
-      page: 'page X',
+      page: 'page 74',
       radio: 'patch_equipment',
       stat: `@{wits}`,
       stat_repeat: '@{wits}',
@@ -368,21 +368,22 @@
       title: 'Pay the Price',
       name: 'payThePrice',
       class: 'pay-the-price',
-      page: 'page X',
+      page: 'page 78',
       radio: 'pay_the_price'
     },
     reach_a_milestone: {
       title: 'Reach a Milestone',
       name: 'reachAMilestone',
       class: 'reach-a-milestone',
-      page: 'page X',
+      ironsworn: true,
+      page: '- Moves Reference - page 10',
       radio: 'reach_a_milestone'
     },
     reach_your_destination: {
       title: 'Reach Your Destination',
       name: 'reachYourDestination',
       class: 'reach-your-destination',
-      page: 'page X',
+      page: 'page 67',
       radio: 'reach_your_destination',
       roll: true,
       progress: true
@@ -391,7 +392,7 @@
       title: 'Resupply',
       name: 'resupply',
       class: 'resupply',
-      page: 'page X',
+      page: 'page 74',
       radio: 'resupply',
       stat: `?{Stat|Wits,@{wits}|Edge - Cave Lion,@{edge}|Shadow - Infiltrator,@{shadow}}`,
       stat_repeat: '?{Stat}',
@@ -401,14 +402,14 @@
       title: 'Reveal a Danger',
       name: 'revealADanger',
       class: 'reveal-a-danger',
-      page: 'page X',
+      page: 'page 82',
       radio: 'reveal_a_danger'
     },
     secure_an_advantage: {
       title: 'Secure an Advantage',
       name: 'secureAnAdvantage',
       class: 'secure-an-advantage',
-      page: 'page X',
+      page: 'page 66',
       radio: 'secure_an_advantage',
       stat: `?{Stat|Edge&#44;@{edge}|Iron&#44;@{iron}|Heart&#44;@{heart}|Shadow&#44;@{shadow}|Wits&#44;@{wits}|God's Stat - Devotant&#44;?{God's Stat&amp;#124;0&amp;#125;|Essence - Invoke&#44;?{Essence&amp;#124;0&amp;#125;&#125;`,
       stat_repeat: '?{Stat}',
@@ -418,14 +419,14 @@
       title: 'Show Resilience',
       name: 'showResilience',
       class: 'show-resilience',
-      page: 'page X',
+      page: 'page 79',
       radio: 'show_resilience'
     },
     sojourn: {
       title: 'Sojourn',
       name: 'sojourn',
       class: 'sojourn',
-      page: 'page X',
+      page: 'page 69',
       radio: 'sojourn',
       stat: `?{Stat|Heart&#44;@{heart}|Shadow - Pretender&#44;@{shadow}|God's Stat - Devotant&#44;?{God's Stat&amp;#124;0&amp;#125;&#125;`,
       stat_repeat: '?{Stat}',
@@ -435,7 +436,7 @@
       title: 'Strengthen Their Loyalty',
       name: 'strengthenTheirLoyalty',
       class: 'strengthen-their-loyalty',
-      page: 'page X',
+      page: 'page 71',
       radio: 'strengthen_their_loyalty',
       stat: `?{Stat|Heart,@{heart}|Wealth,@{wealth}}`,
       stat_repeat: '?{Stat}',
@@ -445,7 +446,7 @@
       title: 'Strike',
       name: 'strike',
       class: 'strike',
-      page: 'page X',
+      page: 'page 72',
       radio: 'strike',
       stat: `?{Stat|Edge&#44;@{edge}|Iron&#44;@{iron}|Light - Lightbearer&#44;?{Light&amp;#124;0&amp;#125;&#125;`,
       stat_repeat: '?{Stat}',
@@ -455,7 +456,7 @@
       title: 'Swear an Iron Vow',
       name: 'swearAnIronVow',
       class: 'swear-an-iron-vow',
-      page: 'page X',
+      page: '- Moves Reference - page 10',
       radio: 'swear_an_iron_vow',
       stat: `?{Stat|Heart&#44;@{heart}|God's Stat - Devotant&#44;?{God's Stat&amp;#124;0&amp;#125;&#125;`,
       stat_repeat: '?{Stat}',
@@ -465,14 +466,14 @@
       title: 'Take a Downtime',
       name: 'takeADowntime',
       class: 'take-a-downtime',
-      page: 'page X',
+      page: 'page 74',
       radio: 'take_a_downtime'
     },
     take_conditional_companion: {
       title: 'Take Conditional Companion',
       name: 'takeConditionalCompanion',
       class: 'take-conditional-companion',
-      page: 'page X',
+      page: 'page 71',
       radio: 'take_conditional_companion',
       stat: `?{Stat|Heart,@{heart}|Wealth,@{wealth}}`,
       stat_repeat: '?{Stat}',
@@ -482,14 +483,14 @@
       title: 'Take on Overload',
       name: 'takeOnOverload',
       class: 'take-on-overload',
-      page: 'page X',
+      page: 'page 76',
       radio: 'take_on_overload'
     },
     test_their_loyalty: {
       title: 'Test their Loyalty',
       name: 'testTheirLoyalty',
       class: 'test-their-loyalty',
-      page: 'page X',
+      page: 'page 71',
       radio: 'test_their_loyalty',
       stat: `?{Stat|Heart,@{heart}|Wealth,@{wealth}}`,
       stat_repeat: '?{Stat}',
@@ -499,7 +500,7 @@
       title: 'Test Your Bond',
       name: 'testYourBond',
       class: 'test-your-bond',
-      page: 'page X',
+      page: 'page 70',
       radio: 'test_your_bond',
       stat: `@{heart}`,
       stat_repeat: '@{heart}',
@@ -509,21 +510,21 @@
       title: 'Trade',
       name: 'trade',
       class: 'trade',
-      page: 'page X',
+      page: 'page 77',
       radio: 'trade'
     },
     turn_the_tide: {
       title: 'Turn the Tide',
       name: 'turnTheTide',
       class: 'turn-the-tide',
-      page: 'page X',
+      page: 'page 72',
       radio: 'turn_the_tide'
     },
     undertake_a_journey: {
       title: 'Undertake a Journey',
       name: 'undertakeAJourney',
       class: 'undertake-a-journey',
-      page: 'page X',
+      page: 'page 67',
       radio: 'undertake_a_journey',
       stat: `?{Stat|Wits,@{wits}|Shadow - Shadow-walk,@{shadow}|Spirit or Heart - Tether&#44;?{Tether Stat&amp;#124;Spirit&amp;#44;@{spirit}&amp;#124;Heart&amp;#44;@{heart}&amp;#125;&#125;`,
       stat_repeat: '?{Stat}',
@@ -533,7 +534,7 @@
       title: 'Write Your Epilogue',
       name: 'writeYourEpilogue',
       class: 'write-your-epilogue',
-      page: 'page X',
+      page: 'page 70',
       radio: 'write_your_epilogue',
       roll: true,
       progress: true
