fixed move reference formatting

--- a/Ironcrunch/src/data/move-list.pug
+++ b/Ironcrunch/src/data/move-list.pug
@@ -11,7 +11,7 @@
       title: 'Aid Your Ally',
       name: 'aidYourAlly',
       class: 'aid-your-ally',
-      page: '- Moves Reference - page 4',
+      page: 'Moves Reference - page 4',
       radio: 'aid_your_ally',
       stat: `?{Stat|Edge, @{edge}|Iron, @{iron}|Heart, @{heart}|Shadow, @{shadow}|Wits, @{wits}}`,
       stat_repeat: '?{Stat}'
@@ -237,7 +237,7 @@
       title: 'Forsake Your Vow',
       name: 'forsakeYourVow',
       class: 'forsake-your-vow',
-      page: '- Moves Reference - page 10',
+      page: 'Moves Reference - page 10',
       radio: 'forsake_your_vow',
     },
     fulfill_your_vow: {
@@ -317,7 +317,7 @@
       class: 'make-camp',
       page: 'page 74',
       radio: 'make_camp',
-      stat: `?{Stat|Supply&#44;@{supply}|Wits - Wildblood&#44;@{wits}|Health - Mammoth&#44;?{Mammoth's Health&amp;#124;0&amp;#125;&#125;`,
+      stat: `?{Stat|Supply&#44;@{supply}|Wits - Wildblood&#44;@{wits}|Health Mammoth&#44;?{Mammoth's Health&amp;#124;0&amp;#125;&#125;`,
       stat_repeat: '?{Stat}',
       roll: true
     },
@@ -376,7 +376,7 @@
       name: 'reachAMilestone',
       class: 'reach-a-milestone',
       ironsworn: true,
-      page: '- Moves Reference - page 10',
+      page: 'Moves Reference - page 10',
       radio: 'reach_a_milestone'
     },
     reach_your_destination: {
@@ -456,7 +456,7 @@
       title: 'Swear an Iron Vow',
       name: 'swearAnIronVow',
       class: 'swear-an-iron-vow',
-      page: '- Moves Reference - page 10',
+      page: 'Moves Reference - page 10',
       radio: 'swear_an_iron_vow',
       stat: `?{Stat|Heart&#44;@{heart}|God's Stat - Devotant&#44;?{God's Stat&amp;#124;0&amp;#125;&#125;`,
       stat_repeat: '?{Stat}',
