--- a/Ironcrunch/src/pages/character/summary.pug
+++ b/Ironcrunch/src/pages/character/summary.pug
@@ -4,4 +4,7 @@ div.sheet-page-container
     include ../../components/stats/character
     include ../../components/details/character
     include ../../components/misses/track
+    div.sheet-motivations
+      h3.sheet-divide &emsp;MOTIVATIONS&emsp;
+      include ../../components/motivations/motivations
     include ../../components/notes/notes
