--- a/Ironcrunch/src/components/nav/character.pug
+++ b/Ironcrunch/src/components/nav/character.pug
@@ -1,27 +1,27 @@
 - 
-  var rows = [
-    { 
-      pages: [
-        { id: '1', text: 'Summary', checked: true },
-        { id: '2', text: 'Vows' },
-        { id: '3', text: 'Motivations' },
-        { id: '4', text: 'Bonds' },
-        { id: '11', text: 'Progress' },
-        { id: '6', text: 'Conditions' }
-      ]
-    },
-    {
-      pages: [
-        { id: '7', text: 'Equipment' },
-        { id: '5', text: 'Proficiencies' },
-        { id: '8', text: 'Assets' },
-        { id: '9', text: 'Effort' },
-        { id: '10', text: 'Moves' },
-        { id: '12', text: 'Oracles' },
-        { id: '14', text: 'Sites' }
-      ]
-    }
-  ]
+  var 
+    rows = [
+      { 
+        pages: [
+          { id: '1', text: 'Essentials', checked: true },
+          { id: '2', text: 'Vows' },
+          { id: '4', text: 'Bonds' },
+          { id: '11', text: 'Progress' },
+          { id: '6', text: 'Conditions' }
+        ]
+      },
+      {
+        pages: [
+          { id: '7', text: 'Equipment' },
+          { id: '5', text: 'Proficiencies' },
+          { id: '8', text: 'Assets' },
+          { id: '9', text: 'Effort' },
+          { id: '10', text: 'Moves' },
+          { id: '12', text: 'Oracles' },
+          { id: '14', text: 'Sites' }
+        ]
+      }
+    ]
 
 div.sheet-nav-bar
   each row in rows
